# FreeMyGPT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/freemygpt/: __init__.py  __main__.py  app.py  auth.py  config.py  sessions.py
src/freemygpt/backends/: __init__.py  base.py  codex.py  mcp_stdio.py
tests/: test_app.py  test_base64_args.py  test_config.py
